# patient-vignette-simulator

./: Dockerfile  README.md  pyproject.toml  requirements.txt
data/input/: vignette.json  vignette_leptospirosis.json  vignette_migraine_improved.json
data/output/: patient_simulator_comparison.xlsx
src/streamlit/: Chat.py  anamnesis_structure.py  app.py  openai_client.py
src/streamlit/Pages/: 01_Vignette.py
